--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="apps">Apps</string>
     <string name="music">Music</string>
     <string name="movies">Movies</string>
+    <string name="retry">Retry</string>
 </resources>
