--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">Hepsiburada-Case-MehmetAliVargun</string>
+    <string name="app_name">iTunes Search</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="books">Books</string>
     <string name="apps">Apps</string>
     <string name="music">Music</string>
     <string name="movies">Movies</string>
     <string name="retry">Retry</string>
+    <string name="search">Search</string>
 </resources>
