Custom Detail Page for each entity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="movies">Movies</string>
     <string name="retry">Retry</string>
     <string name="search">Search</string>
+    <string name="install">Install</string>
 </resources>
